# Genetic-Algorithm-Simulation

./: .gitignore  README.md
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  eye.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json
