[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

lib-simulation = { path = "../simulation" }

[lib]
crate-type = ["cdylib"]